# remote-frpc3

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml  windows-build.yml
output/: cover-art.html  frpc-editor-product-introduction.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: autostart.rs  file.rs  mod.rs  process.rs
src/components/: ErrorBoundary.tsx  Sidebar.tsx
src/components/form/: ArrayField.tsx  FieldGroup.tsx  FileField.tsx  MapField.tsx  NumberField.tsx  SelectField.tsx  SwitchField.tsx  TextField.tsx
src/components/ui/: badge.tsx  help-tooltip.tsx  sonner.tsx
src/hooks/: useTheme.tsx
src/lib/: fieldDescriptions.ts  toml.ts  utils.ts
src/sections/: AuthConfig.tsx  GlobalConfig.tsx  IncludesConfig.tsx  LogConfig.tsx  ProcessManager.tsx  RawToml.tsx  TransportConfig.tsx  WebServerConfig.tsx
src/sections/proxies/: ProxyDrawer.tsx  ProxyList.tsx
src/sections/visitors/: VisitorDrawer.tsx  VisitorList.tsx
src/store/: configStore.ts
src/types/: frpc.ts
