[package]
name = "frpc-editor"
version = "0.1.0"
description = "A visual editor for frpc.toml configuration"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "frpc_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
tauri = { version = "2.5", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["process", "rt", "macros", "time"] }
dirs = "6"

[profile.release]
opt-level = 3
lto = true
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
